app/styles/main.scss
/* ... */
/******************
*** Crowd Factor 
*******************/
.crowd-factor {
  background-image: linear-gradient(to bottom, #bbb, #aaa);
  border: 2px solid #6E6E6E;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
  margin: 20px auto;
  text-align: center;
  width: 80%;

  h3, h4 {
    display: inline-block;
    padding: 0 10px; 
    margin: 10px 0 0 0;
  }

  .current-time {
    background: $acc-med;
    border: 1px solid;
    border-radius: 5px;
    padding: 5px;
  }

  .timeslot {
    display: inline-block;
    margin-left: -27px;
    position: relative;
    text-align: left;
    
    &:first-of-type {
      z-index: 50;
      margin-left: 0;
    }

    &:nth-child(2) {
      z-index: 40;

      td {
        //background: red;
      }
    }

    &:nth-child(3) {
      z-index: 30;
    }

    &:nth-child(4) {
      z-index: 20;
    }
  }

  h5 {
    margin: 10px 0 0 0;
    width: 165px;
  }

  td {
    //background: blue;
    //border: 1px solid black;
    height: 20px;
    text-align: center;
    width: 20px;
  }

  .labels {
    margin: 0 0 0 18%;
    padding: 10px 0;
    width: 600px;

    .none-square {
      box-shadow: 0px 0px 3px 3px $cf-average inset;
    }

    h5 {
      display: inline-block;
    }

    .average > h5 {
      color: 	$text-dark;
    }

    .row1, .row2 {
      text-align: left;

      &>div {
        width: 140px;
        display: inline-block;
      }
    }

    .color {
      border: .5px solid black;
      border-radius: 5px;
      display: inline-block;
      height: 15px;
      margin-bottom: -3px;
      width: 15px;
    }

    .row2 {
      margin-top: -20px;
      padding-left: 15%;
    }
  }

  .marker {
    height: 17px;
    width: 17px;
  }

  .empty {
    color: $cf-empty;
  }

  .saturday-row {
    border-top: 2px solid $high-bright;
  }
}

